--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,3 +42,4 @@ extra:
 copyright: "Copyright (C) 2025 Stephen Nix. Licensed under GNU General Public License v3.0."
 repo_name: PSImmyBot
 repo_url: https://github.com/s-nix/PSImmyBot
+site_url: https://s-nix.github.io/PSImmyBot
