Add comprehensive test suite and refactor API service
Introduces a new xUnit-based test project with smoke tests for all cmdlets, including infrastructure for automated parameter generation and API request recording. Refactors ImmyBotApiService to centralize HTTP logic, support test responders, and improve code maintainability. Adds internal hooks and configuration overrides to facilitate testing, and updates the main project to expose internals to the test assembly.

--- a/PSImmyBot.csproj
+++ b/PSImmyBot.csproj
@@ -20,4 +20,12 @@
     <Folder Include="docs\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="PSImmyBot.Tests" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="tests\**\*.cs" />
+  </ItemGroup>
+
 </Project>
